{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 113,
  "lineage": "bf340a68-5a51-c4d3-0494-433c965858f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_ec2_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-09cdfc2977d5e11fd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cdfc2977d5e11fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "proper noun_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2fffdb5f9e75ce5",
            "private_dns": "ip-10-5-11-158.us-east-2.compute.internal",
            "private_ip": "10.5.11.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01a336daac7701667",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c32dd35d68cd26e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019ec9a440e567525",
            "tags": {
              "Name": "proper noun_ec2_pri0"
            },
            "tags_all": {
              "Name": "proper noun_ec2_pri0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c32dd35d68cd26e1"
            ]
          },
          "dependencies": [
            "aws_key_pair.create_make_keypair",
            "aws_security_group.create_pri_SG",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc",
            "tls_private_key.create_make_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-029237cd58e0ea4a4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029237cd58e0ea4a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "proper noun_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b139000b3996092a",
            "private_dns": "ip-10-5-12-116.us-east-2.compute.internal",
            "private_ip": "10.5.12.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0384686d14079d296",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c32dd35d68cd26e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c44e8bac7578ab8",
            "tags": {
              "Name": "proper noun_ec2_pri1"
            },
            "tags_all": {
              "Name": "proper noun_ec2_pri1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c32dd35d68cd26e1"
            ]
          },
          "dependencies": [
            "aws_key_pair.create_make_keypair",
            "aws_security_group.create_pri_SG",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc",
            "tls_private_key.create_make_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_ec2_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-0e4cf3e88dff7ce65",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4cf3e88dff7ce65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "proper noun_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079dc3d70bc788d75",
            "private_dns": "ip-10-5-1-62.us-east-2.compute.internal",
            "private_ip": "10.5.1.62",
            "public_dns": "ec2-3-17-159-123.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.159.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06de90b7bc40411f0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0082ef7a08528ca32"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02aa68115f4320b5e",
            "tags": {
              "Name": "proper noun_ec2_pub0"
            },
            "tags_all": {
              "Name": "proper noun_ec2_pub0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0082ef7a08528ca32"
            ]
          },
          "dependencies": [
            "aws_key_pair.create_make_keypair",
            "aws_security_group.create_pub_SG",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc",
            "tls_private_key.create_make_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee4f2271a4df2d7d",
            "arn": "arn:aws:ec2:us-east-2:194729441513:instance/i-004f3942df76c2042",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004f3942df76c2042",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "proper noun_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01761d6340c3c1366",
            "private_dns": "ip-10-5-2-74.us-east-2.compute.internal",
            "private_ip": "10.5.2.74",
            "public_dns": "ec2-13-59-65-192.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.65.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0421a950b5b0924e3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0082ef7a08528ca32"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cceac296a0892893",
            "tags": {
              "Name": "proper noun_ec2_pub1"
            },
            "tags_all": {
              "Name": "proper noun_ec2_pub1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0082ef7a08528ca32"
            ]
          },
          "dependencies": [
            "aws_key_pair.create_make_keypair",
            "aws_security_group.create_pub_SG",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc",
            "tls_private_key.create_make_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "create_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:internet-gateway/igw-0b14709f64df4a770",
            "id": "igw-0b14709f64df4a770",
            "owner_id": "194729441513",
            "tags": {
              "Name": "proper noun_IGW"
            },
            "tags_all": {
              "Name": "proper noun_IGW"
            },
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pri_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-0544d2ecba6ae9166",
            "id": "rtb-0544d2ecba6ae9166",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "proper noun-private-route"
            },
            "tags_all": {
              "Name": "proper noun-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pub_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-0d34002f4cca3bf9b",
            "id": "rtb-0d34002f4cca3bf9b",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b14709f64df4a770",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proper noun_public_route"
            },
            "tags_all": {
              "Name": "proper noun_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "create_pri_RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1fb66c424dd164",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-019ec9a440e567525"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726812d148fdb3cd",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-09c44e8bac7578ab8"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1fb66c424dd164",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-019ec9a440e567525"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726812d148fdb3cd",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-09c44e8bac7578ab8"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1fb66c424dd164",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-019ec9a440e567525"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726812d148fdb3cd",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-09c44e8bac7578ab8"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1fb66c424dd164",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-019ec9a440e567525"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726812d148fdb3cd",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-09c44e8bac7578ab8"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1fb66c424dd164",
            "route_table_id": "rtb-0544d2ecba6ae9166",
            "subnet_id": "subnet-019ec9a440e567525"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "create_pub_RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520c328d438ab6cd",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-02aa68115f4320b5e"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2bd63f6a1ebef11",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-0cceac296a0892893"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520c328d438ab6cd",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-02aa68115f4320b5e"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2bd63f6a1ebef11",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-0cceac296a0892893"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520c328d438ab6cd",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-02aa68115f4320b5e"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2bd63f6a1ebef11",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-0cceac296a0892893"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520c328d438ab6cd",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-02aa68115f4320b5e"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2bd63f6a1ebef11",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-0cceac296a0892893"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520c328d438ab6cd",
            "route_table_id": "rtb-0d34002f4cca3bf9b",
            "subnet_id": "subnet-02aa68115f4320b5e"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_pri_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0c32dd35d68cd26e1",
            "description": "proper noun_pri_SG",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0082ef7a08528ca32"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0c32dd35d68cd26e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0082ef7a08528ca32"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "proper noun_pri_SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proper noun_pri_SG"
            },
            "tags_all": {
              "Name": "proper noun_pri_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_pub_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0082ef7a08528ca32",
            "description": "proper noun_pub_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0082ef7a08528ca32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "create_pub_SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proper noun_pub_SG"
            },
            "tags_all": {
              "Name": "proper noun_pub_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pri_SGRulesRDSegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2789928107",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c32dd35d68cd26e1",
            "self": false,
            "source_security_group_id": "sg-0082ef7a08528ca32",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pri_SG",
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pri_SGRulesRDSingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-496839981",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c32dd35d68cd26e1",
            "self": false,
            "source_security_group_id": "sg-0082ef7a08528ca32",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pri_SG",
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesALLegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3288237919",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0082ef7a08528ca32",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesHTTPingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3143211855",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0082ef7a08528ca32",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesSSHingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-231982842",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0082ef7a08528ca32",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-019ec9a440e567525",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019ec9a440e567525",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-private-subnet-1"
            },
            "tags_all": {
              "Name": "proper noun-private-subnet-1"
            },
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-09c44e8bac7578ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c44e8bac7578ab8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-private-subnet-2"
            },
            "tags_all": {
              "Name": "proper noun-private-subnet-2"
            },
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-02aa68115f4320b5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aa68115f4320b5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-public-subnet-1"
            },
            "tags_all": {
              "Name": "proper noun-public-subnet-1"
            },
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0cceac296a0892893",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cceac296a0892893",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-public-subnet-2"
            },
            "tags_all": {
              "Name": "proper noun-public-subnet-2"
            },
            "vpc_id": "vpc-04c8faae5ee67b806"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:vpc/vpc-04c8faae5ee67b806",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-042e3004a12946a7c",
            "default_route_table_id": "rtb-07f653bff8ac2afae",
            "default_security_group_id": "sg-04a56713046553288",
            "dhcp_options_id": "dopt-0772b700676ea6fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c8faae5ee67b806",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f653bff8ac2afae",
            "owner_id": "194729441513",
            "tags": {
              "Name": "proper noun-vpc"
            },
            "tags_all": {
              "Name": "proper noun-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}